# fpsupport

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  SECURITY.md  code.code-workspace  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.sh  sitemap.xml
.build/: tags.md
content/CHANGELOG/: index.html
content/ai_policy/: index.html
content/development/: index.html
content/documentation_policy/: index.html
content/exception_handling/: index.html
content/release/: index.html
content/security/: index.html
content/user/: index.html
docs/: development.md  index.md
docs/content/: development.md  documentation_policy.md  exception_handling.md
examples/: jinja2_templating.py  multiply_random.py
examples/templates/: sample.txt.j2
fpsupport/: __init__.py  decorator.py  exception.py  file.py  io_monad.py  jinja.py  monad.py  struct  struct.py
fpsupport/examples/: __init__.py  file_and_print.py  fileio.py
fpsupport/extra/: fileio.py
scripts/: add_controlled_word.py  score_docs.py  setup.sh  spellcheck.sh
scripts/dictionaries/: controlled.dic
scripts/githooks/: pre-commit  pre-push
search/: search_index.json
setup/dictionaries/: whitelist
setup/preferences/examples/: code.code-workspace  index.html  shell.nix
setup/scripts/: update_pylint_dictionary.py
templates/: file.py
test/unit/: test_file.py  test_fileio.py  test_iomonad.py  test_jinja.py  test_monad.py  test_pytest.py  test_struct.py
test/unit/examples/: __init__.py  test_file_and_print.py
tests/unit/: test_file.py  test_jinja.py  test_monad.py  test_struct.py
