[project]
authors = [
    {name = "George Cummings", email = "gmc@cummings-online.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
description = "Functional Programming Support"
license = "Apache 2.0"
license-files = ["LICEN[CS]E*"]
name = "fp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.urls]
Homepage = "https://pages.github.com/PentheusLennuye/fpsupport"
Documentation = "https://pages.github.com/PentheusLennuye/fpsupport"
Repository = "https://github.com/PentheusLennuye/fpsupport"
Issues = "https://github.com/PentheusLennuye/fpsupport/issues"
Changelog = "https://github.com/PentheusLennuye/fpsupport/CHANGELOG.md"

[tool.poetry]
packages = [{include = "fpsupport"}]

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.20"
mkdocstrings = "^0.30.1"
pylint = "^4.0.2"
pytest-bdd = "^8.1.0"
pydocstyle = "^6.3.0"
mkdocstrings-python = "^1.18.2"
mkdocs-zettelkasten = "^0.4.2"
textstat = "^0.7.11"

[tool.pylint]
ignore-paths = [".venv", "templates"]
max-line-length = 79
score = true

[tool.pydocstyle]
convention = "google"
match = "(?!test_).+\\.py"
match-dir = "[^\\.].*"

[tool.pytest.ini_options]
addopts = [
    "--ignore=environments",
    "--ignore=.venv",
    "--import-mode=importlib"
]
cache_dir = "/tmp/pytest"
pythonpath = [ "fpsupport", "test" ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
